syntax = "proto3";

package api.v1;

option go_package = "github.com/elee1766/btrfsguid/gen/api/v1;apiv1";

service HealthService {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse) {}
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum Status {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  Status status = 1;
  string message = 2;
}
